syntax = "proto3";

option go_package = "github.com/changpro/disk-service/gateway/deps";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";

service GatewayService {
    
    rpc RegisterNewUser(RegisterNewUserReq) returns (CommonHttpRsp) {
        option (google.api.http) = {
            post: "/v1/auth/sign-up"
            body: "*"
        };
    }

    rpc SignIn(SignInReq) returns (CommonHttpRsp) {
        option (google.api.http) = {
            post: "/v1/auth/sign-in"
            body: "*"
        };
    }

    rpc SetIcon(SetIconReq) returns (CommonHttpRsp) {
        option (google.api.http) = {
            post: "/v1/{user_id}/profile/set-icon"
            body: "*"
        };
    }

    rpc ModifyPassword(ModifyPasswordReq) returns (CommonHttpRsp) {
        option (google.api.http) = {
            post: "/v1/{user_id}/profile/modify-pw"
            body: "*"
        };
    }

    rpc GetUserProfile(GetUserProfileReq) returns (CommonHttpRsp) {
        option (google.api.http) = {
            get: "/v1/{user_id}/profile"
        };
    }
}

message CommonHttpRsp {
    int32 code = 1;
    string msg = 2;
    google.protobuf.Any data = 3;
}

message RegisterNewUserReq {
    string user_id = 1[(validate.rules).string = {min_len: 6, pattern: "^[0-9a-zA-Z]*$"}];
    string auth_email = 2[(validate.rules).string = {min_len: 6, pattern: "^[A-Za-z0-9]+([_\\.][A-Za-z0-9]+)*@([A-Za-z0-9\\-]+\\.)+[A-Za-z]{2,6}$"}];
    string pw = 3[(validate.rules).string.min_len = 6];
}

message SignInReq {
    string user_id = 1[(validate.rules).string = {min_len: 6, pattern: "^[0-9a-zA-Z]*$"}];
    string pw = 2[(validate.rules).string.min_len = 6];
}

message SetIconReq {
    string user_id = 1[(validate.rules).string = {min_len: 6, pattern: "^[0-9a-zA-Z]*$"}];
    string icon_url = 2[(validate.rules).string.min_len = 1];
}

message ModifyPasswordReq {
    string user_id = 1[(validate.rules).string = {min_len: 6, pattern: "^[0-9a-zA-Z]*$"}];
    oneof auth_key{
        string old_pw = 2;
        string auth_email = 3;
    }
    string new_pw = 4[(validate.rules).string.min_len = 6];
}

message GetUserProfileReq {
    string user_id = 1[(validate.rules).string = {min_len: 6, pattern: "^[0-9a-zA-Z]*$"}];
}